[package]
name = "rust-libp2p-kad-swarm"
authors = ["Diego Correa Tristain <algoritmia@labormedia.cl>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.49.0", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "relay"] }
futures = "0.3.25"
