[package]
name = "rust-libp2p-kad-swarm"
authors = ["Diego Correa Tristain <algoritmia@labormedia.cl>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.49.0", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "relay", "rsa"] }
futures = "0.3.25"
thiserror = "1"
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.13.1"