[package]
name = "rust-libp2p-kad-swarm"
authors = ["Diego Correa Tristain <algoritmia@labormedia.cl>"]
repository = "https://github.com/labormedia/rust-libp2p-kad-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.49.0", default-features = false, features = ["dns", "async-std", "noise", "tcp", "yamux", "identify", "kad", "ping", "mplex", "relay", "rsa"] }
test-protocol = { version = "0.1.0", path = "protocols/test-protocol", optional = true }
futures = "0.3.25"
thiserror = "1"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1"
base64 = "0.13.1"
timer = "0.2.0"
chrono = "0.4.23"

[features]
default = [ "full" ]
full = [ 
    "request-response", 
    "test-protocol" 
]
request-response = [ "libp2p/request-response" ]
test-protocol = [ "request-response", "dep:test-protocol" ]

[workspace]

[[example]]
name = "requester"
required-features = ["test-protocol"]

[[example]]
name = "responder"
required-features = ["test-protocol"]