[package]
name = "test-protocol"
authors = ["Diego Correa Tristain <algoritmia@labormedia.cl>"]
repository = "https://github.com/labormedia/rust-libp2p-kad-swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.50.0", default-features = false, features = [ "full"]  }
libp2p-core = { git = "https://github.com/libp2p/rust-libp2p", version = "0.38.0" }
libp2p-swarm = { git = "https://github.com/libp2p/rust-libp2p", version = "0.41.0" }
zeroize = "1.5.7"
async-trait = "0.1"
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.1"